--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       retries: 12
 
   api:
-    image: github.com/brunospereira/tcc:0.0.1
+    image: backend:0.0.1
     container_name: tcc-api
     restart: unless-stopped
     depends_on:
@@ -30,6 +30,14 @@ services:
       - "8080:8080"
     volumes:
       - "./backend/.env:/app/.env"
+
+  app:
+    image: frontend:0.0.1
+    container_name: tcc-app
+    depends_on:
+      - api
+    ports:
+      - "5173:5173"
 
 volumes:
   pgdata:
