--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
+    "react-imask": "^7.6.1",
     "react-input-mask": "^3.0.0-alpha.2",
     "react-router-dom": "^7.7.1",
     "styled-components": "^6.1.19"
