--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,6 +20,7 @@
     "react-imask": "^7.6.1",
     "react-input-mask": "^3.0.0-alpha.2",
     "react-router-dom": "^7.7.1",
+    "react-toastify": "^11.0.5",
     "styled-components": "^6.1.19"
   },
   "devDependencies": {
